# nextdns-blocker

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SCHEDULE_GUIDE.md  SECURITY.md  common.py  docker-compose.yml  domains.json.example  install.sh  logrotate.conf  nextdns_blocker.py  pyproject.toml  requirements.txt  setup-logrotate.sh  test_invalid_config.json  test_schedule_evaluator.py  test_validation.py  watchdog.py
.github/: CODEOWNERS  dependabot.yml
.github/.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: pnpm-lock.yaml
docs/src/content/docs/: index.mdx
examples/: README.md  gaming.json  minimal.json  parental-control.json  social-media.json  study-mode.json  work-focus.json
src/nextdns_blocker/: __init__.py  cli.py  client.py  common.py  config.py  exceptions.py  init.py  notifications.py  scheduler.py  watchdog.py
tests/: conftest.py  test_allowlist.py  test_cli_commands.py  test_client.py  test_config_loading.py  test_init.py  test_main_entry.py  test_notifications.py  test_pause_protected.py  test_schedule.py  test_validation.py  test_watchdog.py
