[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextdns-blocker"
version = "5.0.0"
description = "Automated domain blocking controller for NextDNS with per-domain scheduling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aristeo Ibarra" }
]
keywords = [
    "nextdns",
    "dns",
    "blocking",
    "parental-control",
    "scheduling",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0,<3.0.0",
    "click>=8.0.0",
    "platformdirs>=3.0.0",
    "tzdata>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0",
]

[project.scripts]
nextdns-blocker = "nextdns_blocker.__main__:main"

[project.urls]
Homepage = "https://github.com/aristeoibarra/nextdns-blocker"
Repository = "https://github.com/aristeoibarra/nextdns-blocker"
Issues = "https://github.com/aristeoibarra/nextdns-blocker/issues"
Changelog = "https://github.com/aristeoibarra/nextdns-blocker/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/nextdns_blocker"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/domains.json.example",
    "/.env.example",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/nextdns_blocker"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
